# bazel-monorepo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
apps/app1/: BUILD.bazel  index.ts
apps/app2/: BUILD.bazel  index.ts
libs/lib1/: BUILD.bazel  index.ts
