package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

ts_library(
    name = "lib1",
    module_name = "@libs/lib1",
    srcs = glob(["index.ts"]),
    deps = [
      "@npm//tslib"
    ]
)

nodejs_binary(
    name = "lib1_binary",
    data = [":lib1"],
    entry_point = ":index.ts",
    node_modules = "@npm//:node_modules"
)
